devops_tasks/task09_infrastructure/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task09-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task09-webapp
  template:
    metadata:
      labels:
        app: task09-webapp
    spec:
      containers:
        - name: webapp
          image: jcardenos/task09-webapp:1.0
          ports:
            - containerPort: 8000
