devops_tasks/task09_infrastructure/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task09-webapp
spec:
  selector:
    app: task09-webapp
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
